<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <!-- Header View -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <!-- Logo Image -->
    <ImageView
        android:id="@+id/logoTicTicToe"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:contentDescription="Icon of Tic Tac Toe"
        android:src="@drawable/tictactoe2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintWidth_percent="0.25" />

    <!-- User Image -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userPic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="Icon of Tic Tac Toe"
        android:src="@drawable/easy_bot"
        app:civ_border_color="@color/yellow"
        app:civ_border_width="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/logoTicTicToe"
        app:layout_constraintEnd_toStartOf="@id/logoTicTicToe"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintWidth_percent="0.21" />

    <!-- Avatar Image -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/botPic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="Icon of Tic Tac Toe"
        android:src="@drawable/hard_bot"
        app:civ_border_color="@color/green"
        app:civ_border_width="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/logoTicTicToe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toEndOf="@id/logoTicTicToe"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintWidth_percent="0.21" />

    <!-- "VS" TextView -->
    <TextView
        android:id="@+id/vs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray_scale"
        android:fontFamily="@font/aclonica"
        android:paddingHorizontal="15dp"
        android:text="@string/vs"
        android:textColor="@color/RED"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoTicTicToe" />

    <!-- "You" TextView -->
    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:text="You"
        android:textColor="#F7FE00"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/logoTicTicToe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPic"
        app:layout_wrapBehaviorInParent="horizontal_only" />

    <!-- "Bot Anuj" TextView -->
    <TextView
        android:id="@+id/computer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ellipsize="marquee"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:maxLines="1"
        android:text="Bot Anuj"
        android:textColor="#07F83B"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logoTicTicToe"
        app:layout_constraintTop_toBottomOf="@+id/botPic" />

    <!-- TableLayout for Tic Tac Toe Grid -->

    <!-- Reset Button -->
    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="5dp"
        android:layout_margin="15dp"
        android:gravity="center"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toTopOf="@+id/resetBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vs">

        <!-- TableRow 1 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <!-- Buttons for Grid Cells -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_00"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@drawable/option_unselected"
                android:contentDescription="@string/button_00_desc"
                android:elevation="10dp"
                android:textColor="@color/black"
                android:textSize="48sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_01"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@drawable/option_unselected"
                android:contentDescription="@string/button_01_desc"
                android:elevation="10dp"
                android:textColor="@color/black"
                android:textSize="48sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_02"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@drawable/option_unselected"
                android:contentDescription="@string/button_02_desc"
                android:elevation="10dp"
                android:textColor="@color/black"
                android:textSize="48sp"
                android:textStyle="bold" />
        </TableRow>

        <!-- TableRow 2 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <!-- Buttons for Grid Cells -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_10"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@drawable/option_unselected"
                android:contentDescription="@string/button_10_desc"
                android:elevation="10dp"
                android:textColor="@color/black"
                android:textSize="48sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_11"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@drawable/option_unselected"
                android:contentDescription="@string/button_11_desc"
                android:elevation="10dp"
                android:textColor="@color/black"
                android:textSize="48sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_12"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@drawable/option_unselected"
                android:contentDescription="@string/button_12_desc"
                android:elevation="10dp"
                android:textColor="@color/black"
                android:textSize="48sp"
                android:textStyle="bold" />
        </TableRow>

        <!-- TableRow 3 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <!-- Buttons for Grid Cells -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_20"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@drawable/option_unselected"
                android:contentDescription="@string/button_20_desc"
                android:elevation="10dp"
                android:textColor="@color/black"
                android:textSize="48sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_21"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@drawable/option_unselected"
                android:contentDescription="@string/button_21_desc"
                android:elevation="10dp"
                android:textColor="@color/black"
                android:textSize="48sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_22"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@drawable/option_unselected"
                android:contentDescription="@string/button_22_desc"
                android:elevation="10dp"
                android:textColor="@color/black"
                android:textSize="48sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>


    <Button
        android:id="@+id/resetBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_1"
        android:gravity="center"
        android:text="@string/reset"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tableLayout"
        app:layout_constraintWidth_percent="0.5" />

    <!-- AdView XML layout -->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="@string/BANNER_AD_UNIT_ID"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
