<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/background"
    tools:context="com.bg4u.coins4u.LoginActivity">

    <ImageView
        android:id="@+id/logoView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/coins_4u_user"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        app:srcCompat="@drawable/coinlogowithtext_4u" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_your_account"
        android:textColor="@color/color_white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoView"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/textbox"
                android:drawableStart="@drawable/email"
                android:drawablePadding="15dp"
                android:drawableTint="@color/colorPurple"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="15dp" />

            <EditText
                android:id="@+id/passwordBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/textbox"
                android:drawableStart="@drawable/password"
                android:drawablePadding="15dp"
                android:drawableTint="@color/colorPurple"
                android:ems="10"
                android:hint="@string/password"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:padding="15dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>